--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - A Pen by Murid Nakal</title>
-  <link rel="stylesheet" href="./donelfantastic.github.io/style.css">
+  <link rel="stylesheet" href="./src/style.css">
 
 </head>
 <body>
