--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta name="referrer" content="never">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
   <link rel="stylesheet" href="https://kit.fontawesome.com/d5fba335cd.js" crossorigin="anonymous">
-  <script type=”text/javascript” src=”removeAd.js”></script>
+  <script type=”text/javascript” src=”.src/script.js”></script>
 </head>
 
 <body>
