--- a/index.html
+++ b/index.html
@@ -2,16 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - A Pen by Murid Nakal</title>
   <link rel="stylesheet" href="./src/style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<html>
-
-<head>
-  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Donelfantastic</title>
@@ -23,12 +14,13 @@
 </head>
 
 <body>
+<!-- partial:index.partial.html -->
   <menu-nav>
-    <a href="#home"><i class="fas fa-home fa-fw"></i></a>
-    <a href="#kosong"><i class="fa fa-cog fa-spin"></i></a>
+    <a href="/"><i class="fas fa-home fa-fw"></i></a>
     <a href="#satu"><i class="fa fa-calendar fa-fw"></i></a>
     <a href="#dua"><i class="fas fa-photo-video fa-fw"></i></a>
     <a href="#tiga"><i class="fa fa-music fa-fw"></i></a>
+    <a href="#kosong"><i class="fa fa-cog fa-spin"></i></a>
     <a href="#empat"><i class="fa fa-rss fa-fw"></i></a>
   </menu-nav>
 
@@ -109,11 +101,5 @@
         }
         //–>
     </script>
-</body>
-
-</html>
-<!-- partial -->
-  <script  src="./script.js"></script>
-
 </body>
 </html>
