--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="./src/style.css">
-  <meta name="viewport" content="width=device-width">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Donelfantastic</title>
   <meta name="robots" content="noindex">
   <meta name="referrer" content="never">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
+  <link rel="stylesheet" href="./src/style.css">
   <link rel="stylesheet" href="https://kit.fontawesome.com/d5fba335cd.js" crossorigin="anonymous">
-  <script type=”text/javascript” src=”.src/script.js”></script>
 </head>
 
 <body>
@@ -79,6 +78,7 @@
     <div class="footer">
       <p>Copyright © 2023 Donel Fantastic. All Rights Reserved.</p>
   </footer>
+  <script type=”text/javascript” src=”.src/script.js”></script>
   <script type=”text/javascript”>
     < span onClick = ”writeCookie(0)” > < /span> <
       !–
