--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <a href="#empat"><i class="fa fa-rss fa-fw"></i></a>
   </menu-nav>
 
-  <div class='container'>
+  <div class='container resp-container'>
     <section id='home'>
       <h1></h1>
     </section>
