--- a/index.html
+++ b/index.html
@@ -61,8 +61,20 @@
       </h1>
     </section>
   </div>
-
-  <style>
+<!-- start of footer -->
+<footer class="footer">
+        <div class="icons">
+           <a href="#"><i class="fab fa-facebook"></i></a>
+           <a href="#"><i class="fab fa-youtube"></i></a>
+           <a href="#"><i class="fab fa-instagram"></i></a>
+           <a href="#"><i class="fab fa-twitter"></i></a>
+            <p class="company-name">
+                Donelfantastic &copy; 2023, ALL Rights Reserved
+            </p>
+        </div>
+    </footer>
+<!-- end of footer -->
+  <!--//<style>
     .footer {
       position: fixed;
       left: 0;
@@ -77,7 +89,7 @@
   <footer>
     <div class="footer">
       <p>Copyright © 2023 Donel Fantastic. All Rights Reserved.</p>
-  </footer>
+  </footer>//-->
   <script type=”text/javascript” src=”.src/script.js”></script>
   <script type=”text/javascript”>
     < span onClick = ”writeCookie(0)” > < /span> <
