--- a/index.html
+++ b/index.html
@@ -61,20 +61,8 @@
       </h1>
     </section>
   </div>
-<!-- start of footer -->
-<footer class="footer">
-        <div class="icons">
-           <a href="#"><i class="fab fa-facebook"></i></a>
-           <a href="#"><i class="fab fa-youtube"></i></a>
-           <a href="#"><i class="fab fa-instagram"></i></a>
-           <a href="#"><i class="fab fa-twitter"></i></a>
-            <p class="company-name">
-                Donelfantastic &copy; 2023, ALL Rights Reserved
-            </p>
-        </div>
-    </footer>
-<!-- end of footer -->
-  <!--//<style>
+
+  <style>
     .footer {
       position: fixed;
       left: 0;
@@ -84,12 +72,30 @@
       color: white;
       text-align: center;
     }
+.icons {
+  padding-top: 1rem;
+}
+.icons a:hover {
+  color: red;
+}
+
+.icons a {
+  text-decoration: none;
+  font-size: 2rem;
+  margin: 0.5rem;
+  color: #f4f4f4;
+}
   </style>
 
   <footer>
     <div class="footer">
+  <div class="icons">
+           <a href="#"><i class="fab fa-facebook"></i></a>
+           <a href="#"><i class="fab fa-youtube"></i></a>
+           <a href="#"><i class="fab fa-instagram"></i></a>
+           <a href="#"><i class="fab fa-twitter"></i></a>
       <p>Copyright © 2023 Donel Fantastic. All Rights Reserved.</p>
-  </footer>//-->
+  </footer>
   <script type=”text/javascript” src=”.src/script.js”></script>
   <script type=”text/javascript”>
     < span onClick = ”writeCookie(0)” > < /span> <
