--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 .icons a {
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 1.5rem;
   margin: 0.5rem;
   color: #f4f4f4;
 }
@@ -90,9 +90,9 @@
   <footer>
     <div class="footer">
   <div class="icons">
-           <a href="#"><i class="fab fa-facebook"></i></a>
-           <a href="#"><i class="fab fa-youtube"></i></a>
-           <a href="#"><i class="fab fa-instagram"></i></a>
+           <a href="https://facebook.com/donelfantastic"><i class="fab fa-facebook"></i></a>
+           <a href="https://youtube.com/donelfantastic"><i class="fab fa-youtube"></i></a>
+           <a href="https://instagram.com/donelfantastic"><i class="fab fa-instagram"></i></a>
            <a href="#"><i class="fab fa-twitter"></i></a>
       <p>Copyright © 2023 Donel Fantastic. All Rights Reserved.</p>
   </footer>
