--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 .icons a {
   text-decoration: none;
-  font-size: 1.5rem;
+  font-size: 1rem;
   margin: 0.5rem;
   color: #f4f4f4;
 }
@@ -91,9 +91,10 @@
     <div class="footer">
   <div class="icons">
            <a href="https://facebook.com/donelfantastic"><i class="fab fa-facebook"></i></a>
-           <a href="https://youtube.com/donelfantastic"><i class="fab fa-youtube"></i></a>
+           <a href="https://youtube.com/@donelfantastic"><i class="fab fa-youtube"></i></a>
            <a href="https://instagram.com/donelfantastic"><i class="fab fa-instagram"></i></a>
            <a href="#"><i class="fab fa-twitter"></i></a>
+           <a href="https://donelfantastic.github.io/"><i class="fab fa-github"></i></a>
       <p>Copyright © 2023 Donel Fantastic. All Rights Reserved.</p>
   </footer>
   <script type=”text/javascript” src=”.src/script.js”></script>
