--- a/creativemedia/index.html
+++ b/creativemedia/index.html
@@ -43,9 +43,7 @@
 
   <script src="https://cdn.dashjs.org/latest/dash.all.min.js"></script>
 
-  <div>
-<!-- partial -->
-  <script src='https://codepen.io/donelfantastic/pen/RwBRZqX.js'></script><script  src="./script.js"></script>
+  <script  src="./script.js"></script>
 
 </body>
 </html>
