--- a/creativemedia/index.html
+++ b/creativemedia/index.html
@@ -11,7 +11,7 @@
 
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" rel="stylesheet">
   
-   <link rel="stylesheet" href="./style.css">
+   <link rel="stylesheet" href="./src/style.min.css">
 
 </head>
 
@@ -43,7 +43,7 @@
 
   <script src="https://cdn.dashjs.org/latest/dash.all.min.js"></script>
 
-  <script  src="./script.js"></script>
+  <script  src="./src/script.js"></script>
 
 </body>
 </html>
