--- a/creativemedia/dftv.html
+++ b/creativemedia/dftv.html
@@ -43,7 +43,7 @@
 
   <script src="https://cdn.dashjs.org/latest/dash.all.min.js"></script>
 
-  <script  src="./src/script.js"></script>
+  <script src="https://muridnakal.neocities.org/2023/dist/script.js"></script>
 
 </body>
 </html>
