--- a/creativemedia/dftv.html
+++ b/creativemedia/dftv.html
@@ -7,11 +7,11 @@
   <meta name="robots" content="noindex">
   <meta name="referer" content="never">
   <title>Donelfantastic 2023</title>
-  <link href="https://cdn.jsdelivr.net/npm/video.js@8.0.4/dist/video-js.min.css" rel="stylesheet">
+  <link href="lib/video-js.min.css" rel="stylesheet">
 
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" rel="stylesheet">
+  <link href="lib/all.min.css" rel="stylesheet">
   
-   <link rel="stylesheet" href="./src/style.min.css">
+   <link rel="stylesheet" href="lib/stylelist.min.css">
 
 </head>
 
@@ -31,19 +31,19 @@
     <div class="vjs-playlist responsive-playlist"></div>
   </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script src="lib/jquery.min.js"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/videojs-ie8@1.1.2/dist/videojs-ie8.min.js"></script>
+  <script src="lib/videojs-ie8.min.js"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/video.js@8.0.4/dist/video.min.js"></script>
+  <script src="lib/video.min.js"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/videojs-playlist-ui@4.1.0/dist/videojs-playlist-ui.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/videojs-playlist@5.0.1/dist/videojs-playlist.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/videojs-contrib-eme@3.5.0/dist/videojs-contrib-eme.min.js"></script>
+  <script src="lib/videojs-playlist-ui.min.js"></script>
+  <script src="lib/videojs-playlist.min.js"></script>
+  <script src="lib/videojs-contrib-eme.min.js"></script>
 
-  <script src="https://cdn.dashjs.org/latest/dash.all.min.js"></script>
+  <script src="lib/dash.all.min.js"></script>
 
-  <script src="https://muridnakal.neocities.org/2023/dist/script.js"></script>
+  <script src="lib/scriptlist.js"></script>
 
 </body>
 </html>
