--- a/creativemedia/dftv.html
+++ b/creativemedia/dftv.html
@@ -7,11 +7,11 @@
   <meta name="robots" content="noindex">
   <meta name="referer" content="never">
   <title>Donelfantastic 2023</title>
-  <link href="lib/video-js.min.css" rel="stylesheet">
+  <link href="./lib/video-js.min.css" rel="stylesheet">
 
-  <link href="lib/all.min.css" rel="stylesheet">
+  <link href="./lib/all.min.css" rel="stylesheet">
   
-   <link rel="stylesheet" href="lib/stylelist.min.css">
+   <link rel="stylesheet" href="./lib/stylelist.min.css">
 
 </head>
 
@@ -31,19 +31,19 @@
     <div class="vjs-playlist responsive-playlist"></div>
   </div>
 
-  <script src="lib/jquery.min.js"></script>
+  <script src="./lib/jquery.min.js"></script>
 
-  <script src="lib/videojs-ie8.min.js"></script>
+  <script src="./lib/videojs-ie8.min.js"></script>
 
-  <script src="lib/video.min.js"></script>
+  <script src="./lib/video.min.js"></script>
 
-  <script src="lib/videojs-playlist-ui.min.js"></script>
-  <script src="lib/videojs-playlist.min.js"></script>
-  <script src="lib/videojs-contrib-eme.min.js"></script>
+  <script src="./lib/videojs-playlist-ui.min.js"></script>
+  <script src="./lib/videojs-playlist.min.js"></script>
+  <script src="./lib/videojs-contrib-eme.min.js"></script>
 
-  <script src="lib/dash.all.min.js"></script>
+  <script src="./lib/dash.all.min.js"></script>
 
-  <script src="lib/scriptlist.js"></script>
+  <script src="./lib/scriptlist.js"></script>
 
 </body>
 </html>
