--- a/creativemedia/dftv.html
+++ b/creativemedia/dftv.html
@@ -7,11 +7,11 @@
   <meta name="robots" content="noindex">
   <meta name="referer" content="never">
   <title>Donelfantastic 2023</title>
-  <link href="./lib/video-js.min.css" rel="stylesheet">
+  <link href="/lib/video-js.min.css" rel="stylesheet">
 
-  <link href="./lib/all.min.css" rel="stylesheet">
+  <link href="/lib/all.min.css" rel="stylesheet">
   
-   <link rel="stylesheet" href="./lib/stylelist.min.css">
+   <link rel="stylesheet" href="/lib/stylelist.min.css">
 
 </head>
 
