--- a/creativemedia/dftv.html
+++ b/creativemedia/dftv.html
@@ -31,19 +31,19 @@
     <div class="vjs-playlist responsive-playlist"></div>
   </div>
 
-  <script src="./lib/jquery.min.js"></script>
+  <script src="/lib/jquery.min.js"></script>
 
-  <script src="./lib/videojs-ie8.min.js"></script>
+  <script src="/lib/videojs-ie8.min.js"></script>
 
-  <script src="./lib/video.min.js"></script>
+  <script src="/lib/video.min.js"></script>
 
-  <script src="./lib/videojs-playlist-ui.min.js"></script>
-  <script src="./lib/videojs-playlist.min.js"></script>
-  <script src="./lib/videojs-contrib-eme.min.js"></script>
+  <script src="/lib/videojs-playlist-ui.min.js"></script>
+  <script src="/lib/videojs-playlist.min.js"></script>
+  <script src="/lib/videojs-contrib-eme.min.js"></script>
 
-  <script src="./lib/dash.all.min.js"></script>
+  <script src="/lib/dash.all.min.js"></script>
 
-  <script src="./lib/scriptlist.js"></script>
+  <script src="/lib/scriptlist.js"></script>
 
 </body>
 </html>
