--- a/creativemedia/dftv.html
+++ b/creativemedia/dftv.html
@@ -9,7 +9,7 @@
   <title>Donelfantastic 2023</title>
   <link href="https://donelfantastic.github.io/creativemedia/lib/video-js.min.css" rel="stylesheet">
 
-  <link href="https://donelfantastic.github.io/creativemedia/lib/all.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" rel="stylesheet">
   
    <link rel="stylesheet" href="https://donelfantastic.github.io/creativemedia/lib/stylelist.min.css">
 
