--- a/creativemedia/dftv.html
+++ b/creativemedia/dftv.html
@@ -43,7 +43,7 @@
 
   <script src="https://donelfantastic.github.io/creativemedia/lib/dash.all.min.js"></script>
 
-  <script src="https://donelfantastic.github.io/creativemedia/lib/scriptlist.min.js"></script>
+  <script src="../lib/scriptlist.min.js"></script>
 
 </body>
 </html>
