--- a/creativemedia/dftv.html
+++ b/creativemedia/dftv.html
@@ -11,7 +11,7 @@
 
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" rel="stylesheet">
   
-   <link rel="stylesheet" href="https://donelfantastic.github.io/creativemedia/lib/stylelist.min.css">
+   <link rel="stylesheet" href="lib/stylelist.min.css">
 
 </head>
 
@@ -43,7 +43,7 @@
 
   <script src="https://donelfantastic.github.io/creativemedia/lib/dash.all.min.js"></script>
 
-  <script src="../lib/scriptlist.min.js"></script>
+  <script src="lib/scriptlist.min.js"></script>
 
 </body>
 </html>
