--- a/creativemedia/dftv.html
+++ b/creativemedia/dftv.html
@@ -7,7 +7,7 @@
   <meta name="robots" content="noindex">
   <meta name="referer" content="never">
   <title>Donelfantastic 2023</title>
-  <link href="https://donelfantastic.github.io/creativemedia/lib/video-js.min.css" rel="stylesheet">
+  <link href="lib/video-js.min.css" rel="stylesheet">
 
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" rel="stylesheet">
   
@@ -31,17 +31,17 @@
     <div class="vjs-playlist responsive-playlist"></div>
   </div>
 
-  <script src="https://donelfantastic.github.io/creativemedia/lib/jquery.min.js"></script>
+  <script src="lib/jquery.min.js"></script>
 
-  <script src="https://donelfantastic.github.io/creativemedia/lib/videojs-ie8.min.js"></script>
+  <script src="lib/videojs-ie8.min.js"></script>
 
-  <script src="https://donelfantastic.github.io/creativemedia/lib/video.min.js"></script>
+  <script src="lib/video.min.js"></script>
 
-  <script src="https://donelfantastic.github.io/creativemedia/lib/videojs-playlist-ui.min.js"></script>
-  <script src="https://donelfantastic.github.io/creativemedia/lib/videojs-playlist.min.js"></script>
-  <script src="https://donelfantastic.github.io/creativemedia/lib/videojs-contrib-eme.min.js"></script>
+  <script src="lib/videojs-playlist-ui.min.js"></script>
+  <script src="lib/videojs-playlist.min.js"></script>
+  <script src="lib/videojs-contrib-eme.min.js"></script>
 
-  <script src="https://donelfantastic.github.io/creativemedia/lib/dash.all.min.js"></script>
+  <script src="lib/dash.all.min.js"></script>
 
   <script src="lib/scriptlist.min.js"></script>
 
