--- a/creativemedia/donelfans.html
+++ b/creativemedia/donelfans.html
@@ -7,8 +7,7 @@
   <meta name="robots" content="noindex">
   <meta name="referer" content="never">
   <title> Donelfantastic 2023</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<style>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" rel="stylesheet">
 
 body {
   background-color: #8098ff;
