--- a/creativemedia/donelfans.html
+++ b/creativemedia/donelfans.html
@@ -9,119 +9,163 @@
   <title> Donelfantastic 2023</title>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer">
 <style>
+
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  background-color: #8098ff;
+  background-color: #000;
+  font-family: "Oswald", sans-serif;
+  font-size: 18px;
 }
 
-.container {
+.vid-player {
+  padding: 0;
+  margin: 0;
   display: block;
-  font-weight: bold;
-  width: 100px;
-  height: 140px;
   position: relative;
+  margin-bottom: 1em;
+  overflow: hidden;
 }
 
-.card1 {
-  width: 65px;
-  height: 65px;
-  position: relative;
-  top: 25px;
+.player {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  height: 100%;
+  width: 100%;
+  border: 0;
 }
 
-span {
-  font-size: 13px;
-  color: #000;
-  display: inline-block;
-  position: relative;
-  top: 30px;
+.responsive-vid {
+  padding-bottom: 56.25%;
 }
 
-figcaption {
+.playlist, 
+.playlist2 {
+  padding: 0;
+  margin: 0;
+  margin-bottom: 5em;
+  position: relative;
+  border: 5px solid #000;
+  display: block;
+  flex-grow: 2;
+  background: #000;
+  width: 100%;
+  height: 170px;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  display: none;
+  }
+
+.responsive-playlist, 
+.responsive-playlist2 {
+  padding-bottom: 0%;
+  display: none;
+}
+
+.playlist ul li, 
+.playlist2 ul li {
+  width: auto;
+  height: 50px;
+  display: flex;
+  border: 1px solid #fff;
+  border-radius: 3px;
+  margin: 0px;
+  margin-top: 1px;
+  margin-bottom: 5px;
+  cursor: pointer;
+  padding: 1px;
+}
+
+.playlist ul li a, 
+.playlist2 ul li a {
+  display: flex;
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  align-items: center;
+  width: 100%;
+}
+
+.playlist ul li img, 
+.playlist2 ul li img {
+  padding: 0 10px 0 2px;
+  /*border: 1px solid #fff;
+  border-radius: 5px;*/
+  display: flex;
+  height: 40px;
+  width: 110px;
+}
+
+.playlist ul li:hover, 
+.playlist2 ul li:hover {
+  background-color: #eee;
+  }
+
+.button, 
+.button2 {
+  display: flex;
+  font-family: "Oswald", sans-serif;
+  font-size: 36px;
+  background-color: transparent;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  border : none;
+  color: #eee;
+  /*width: -webkit-fill-available;*/
+  cursor: pointer;
+  }
+
+
+.footer {
+  position: fixed;
+  font-family: "Oswald", sans-serif;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: transparent;
   text-align: center;
+  color: #f4f4f4;
   
 }
 
-.btn2 {
-  margin: 5px;
-  font: bold 10px Arial;
+.icons {
+  padding-top: 1rem;
+}
+.icons a:hover {
+  color: red;
+}
+
+.icons a {
   text-decoration: none;
-  border-radius: 10px;
+  font-size: 2rem;
+  margin: 0.5rem;
+  color: #f4f4f4;
+}
+
+.company-name {
+  font-size: 1rem;
   text-transform: uppercase;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-  padding: 0px;
-  letter-spacing: 1px;
-  display: -webkit-inline-flex;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  align-items: center;
-  -webkit-justify-content: center;
-  -moz-justify-content: center;
-  -ms-justify-content: center;
-  justify-content: center;
-  -ms-flex-pack: center;
-  text-align: center;
-  border: 3px solid #8098ff;
-  background-color: #fff;
-  color: #102770;
-  box-shadow: 0 8px 24px 0 rgba(255, 235, 167, 0.2);
-  transition: 0.2s;
+  margin-top: 0.5rem;
+  font-family: "Oswald", sans-serif;
+  margin-bottom: 2.5em;
 }
 
-.btn2:active,
-.btn2:focus,
-.btn2:hover {
-  color: #ffeba7;
-  box-shadow: 0 0 0.2em 0.2em rgba(255, 255, 255);
-  border: 3px solid gold;
-  outline: none;
-  transform: scale(1.07);
+@media (max-width: 500px) {
+  html {
+    font-size: 50%;
+  }
 }
 
-.container1 {
-  background-color: #fff;
-  width: 100%;
-  height: 55px;
-  position: relative;
-}
-
-.right {
-  background-color: #fff;
-  border-radius: 10px;
-  position: absolute;
-  top: 9px;
-  right: 4px;
-  padding: 2px;
-}
-.left {
-  color: #000;
-  background-color: #fff;
-  border: 0px dodgerblue solid;
-  border-radius: 10px;
-  font-size: 30px;
-  position: absolute;
-  top: 8px;
-  left: 6px;
-  padding: 2px;
-  outline: none;
-}
-
-.text {
-  font-size: 18px;
-  color: #000;
-  font-weight: 1000;
-  position: absolute;
-  top: 17px;
-  left: 65px;
-}
-
-div.ex1 {
-  width: 100%;
-  height: 93vh;
-  overflow: scroll;
+@media (min-width: 501px) and (max-width: 768px) {
+  html {
+    font-size: 50%;
+  }
 }
 
 </style>  
