--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="title" content="Donel Fantastic">
-  <meta name="description" content="Donelfantastic site official">
-  <meta name="keywords" content="Nella Kharisma, Dory Harsa, NELLA, DORY, donelfans, nellalovers, nella kharisma lovers, rencang dory, sahabat dory, fans">
-  <meta name="robots" content="index, follow">
-  <meta name="author" content="Donelfantastic">
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="title" content="Donel Fantastic"/>
+  <meta name="description" content="Donelfantastic site official"/>
+  <meta name="keywords" content="Nella Kharisma, Dory Harsa, NELLA, DORY, donelfans, nellalovers, nella kharisma lovers, rencang dory, sahabat dory, fans"/>
+  <meta name="robots" content="index, follow"/>
+  <meta name="author" content="Donelfantastic"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'><link rel="stylesheet" href="./src/min.style.css">  
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'/>
+  <link rel="stylesheet" href="./src/min.style.css"/>  
 
 </head>
 
