--- a/iptv/rctiTV.html
+++ b/iptv/rctiTV.html
@@ -7,7 +7,7 @@
   <meta name="robots" content="noindex" />
   <meta name="referrer" content="never" />
   <title>DONELFANTASTIC | RCTI TV</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/plyr/3.6.12/plyr.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/plyr/3.6.12/plyr.min.css" crossorigin="anonymous"/>
   <style>
     * {
       margin: 0;
@@ -53,11 +53,11 @@
   </div>
 </body>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/plyr/3.6.12/plyr.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/plyr/3.6.12/plyr.min.js" crossorigin="anonymous"></script>
 
-<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=es6,Array.prototype.includes,CustomEvent,Object.entries,Object.values,URL"></script>
+<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=es6,Array.prototype.includes,CustomEvent,Object.entries,Object.values,URL" crossorigin="anonymous"></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/2.4.0/shaka-player.compiled.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/2.4.0/shaka-player.compiled.js" crossorigin="anonymous"></script>
 
 <script>
   document.addEventListener("DOMContentLoaded", () => {
