--- a/iptv/beinsports1DAZN.html
+++ b/iptv/beinsports1DAZN.html
@@ -23,7 +23,7 @@ visibility:hidden;
 </script>
 
 <div data-shaka-player-container style='position:absolute;z-index: -1;top: 0;left: 0;width: 100%; height: 100%;object-fit: cover;'>
-<video autoplay data-shaka-player id='video' style='width:100%;height:100vh;'>
+<video autoplay data-shaka-player id='video' style='width:100%;height:100%;'>
 </video>
 </div>
 <script> 
