--- a/iptv/beinsports3DAZN.html
+++ b/iptv/beinsports3DAZN.html
@@ -28,7 +28,7 @@
   
   <script>!function(a,b,c,d,e,f){a.ddjskey=e;a.ddoptions=f||null;var m=b.createElement(c),n=b.getElementsByTagName(c)[0];m.async=1,m.src=d,n.parentNode.insertBefore(m,n)}(window,document,"script","https://js.datadome.co/tags.js","99B1C08278137CE22ADB60CE8DE020", {"ajaxListenerPath": true});</script>
   //<div class="container video-fill" data-shaka-player-container style='position:relative;z-index: -1;top: 0;left: 0;width: 100%; height: 100%;object-fit:fill cover;'>
-  <div class="container video-fill" data-shaka-player-container style='position: absolute;z-index: -1;top: 0;left: 0;width: 100%; height: 100%;object-fit: fill cover;'>
+  <div class="container video-fill" data-shaka-player-container style='position: relative;z-index: -1;top: 0;left: 0;width: 100%; height: 100%;object-fit: fill cover;'>
   <video autoplay data-shaka-player id='video' style='width:100%;height:100%;'>
   </video>
   </div>
