--- a/iptv/beinsports2DAZN.html
+++ b/iptv/beinsports2DAZN.html
@@ -18,7 +18,10 @@
   </style>
   
   <script>!function(a,b,c,d,e,f){a.ddjskey=e;a.ddoptions=f||null;var m=b.createElement(c),n=b.getElementsByTagName(c)[0];m.async=1,m.src=d,n.parentNode.insertBefore(m,n)}(window,document,"script","https://js.datadome.co/tags.js","99B1C08278137CE22ADB60CE8DE020", {"ajaxListenerPath": true});</script>
-<div class="container video-fill" data-shaka-player-container style='position:absolute;z-index: -1;top: 0;left: 0;width: 100%; height: 100%;object-fit:fill cover;'><video autoplay data-shaka-player id='video' poster="https://raw.githubusercontent.com/tvbolaonline98/sopporot/main/sbo_logo.png" style='width:100%;height:100%;'></video></div>
+<div class="container video-fill" data-shaka-player-container style='position:absolute;z-index: -1;top: 0;left: 0;width: 100%; height: 100%;object-fit:fill cover;'>
+  <video autoplay data-shaka-player id='video' poster="" style='width:100%;height:100%;'>
+  </video>
+  </div>
 <script> 
 async function init() { 
 const video = document.getElementById('video'); 
@@ -33,7 +36,7 @@ player.configure({
     }
   }
 });
-//player.configure({drm:{servers:{'com.widevine.alpha':'https://license.dstv.com/widevine/getLicense?CrmId=afl&AccountId=afl&ContentId=SH2&SessionId=D3C00F885C24B9C6&Ticket=C839A8D71AB94299'}}}); 
+
 window.player = player; 
 window.ui = ui; 
 player.addEventListener('error', onPlayerErrorEvent); 
