--- a/iptv/rctiTV.html
+++ b/iptv/rctiTV.html
@@ -1,87 +1,107 @@
-<html lang="en">
+<!DOCTYPE html>
+<html>
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <meta name="robots" content="noindex" />
-  <meta name="referrer" content="never" />
-  <title>DONELFANTASTIC | RCTI TV</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/plyr/3.6.12/plyr.min.css" crossorigin="anonymous"/>
+  <script src="/cdn-cgi/apps/head/aqhzBqkyhgXFT9tYquvCBE2xpuY.js"></script>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      background-color: #000;
-      width: 100%;
-      --plyr-color-main: pink;
-    }
-
-    .video-section {
-      padding: 0;
-      margin: 0;
-      display: block;
-      position: relative;
-      margin-bottom: 0em;
-      overflow: hidden;
-    }
-
-    .video-responsive {
-      padding-bottom: 56.25%
-    }
-
-    #donelfantastic {
-      position: relative;
-      top: 0;
-      left: 0;
-      bottom: 0;
-      height: 100%;
-      width: 100%;
-      border: 0;
+    div a img {
+      visibility: hidden;
     }
   </style>
-
+  <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+  <meta name="referrer" content="no-referrer" />
+  <title>DONELFANTASTIC | RCTI TV</title>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.0.2/shaka-player.ui.min.js' crossorigin='anonymous'></script>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.0.2/controls.min.css' crossorigin='anonymous' />
+  <script async src='/cdn-cgi/challenge-platform/h/g/scripts/invisible.js?cb=6ebfddfd6fa3499c'></script>
 </head>
 
 <body>
-  <div class="video-section video-responsive">
-    <video id="donelfantastic" preload="auto" controls crossorigin playsinline data-poster="https://thumbor.prod.vidiocdn.com/fgcHi2h8yWt6Bc3A7XSquRqWDCQ=/filters:quality(70)/vidio-web-prod-livestreaming/uploads/livestreaming/image/665/rcti-e4a143.jpg"></video>
-  </div>
-</body>
+  <script>
+    ! function(a, b, c, d, e, f) {
+      a.ddjskey = e;
+      a.ddoptions = f || null;
+      var m = b.createElement(c),
+        n = b.getElementsByTagName(c)[0];
+      m.async = 1, m.src = d, n.parentNode.insertBefore(m, n)
+    }(window, document, "script", "https://js.datadome.co/tags.js", "99B1C08278137CE22ADB60CE8DE020", {
+      "ajaxListenerPath": true
+    });
+  </script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/plyr/3.6.12/plyr.min.js" crossorigin="anonymous"></script>
-
-<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=es6,Array.prototype.includes,CustomEvent,Object.entries,Object.values,URL" crossorigin="anonymous"></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/2.4.0/shaka-player.compiled.js" crossorigin="anonymous"></script>
-
-<script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const source =
-      "https://av-live-cdn.mncnow.id/live/eds/RCTI-DD/sa_dash_vmx/RCTI-DD.mpd";
-    const video = document.querySelector("#donelfantastic");
-    const player = new Plyr(video);
-    window.player = player;
-    if (shaka.Player.isBrowserSupported()) {
-      // Install built-in polyfills
-      shaka.polyfill.installAll();
-      const shakaInstance = new shaka.Player(video);
-      shakaInstance.configure({
-        drm: {
-          clearKeys: {
-            "9ba3e153ef8956d6e2b0684fcf74f58f": "dbc28cb5c6426080f984a5b6d436bb30"
-          }
-        }
+  <body bgcolor='black' style='margin:0' oncontextmenu='return false' onkeydown='return false' onmousedown='return false'>
+    <style>
+      .video-fill video {
+        object-fit: fill cover;
+      }
+    </style>
+    <script>
+      ! function(a, b, c, d, e, f) {
+        a.ddjskey = e;
+        a.ddoptions = f || null;
+        var m = b.createElement(c),
+          n = b.getElementsByTagName(c)[0];
+        m.async = 1, m.src = d, n.parentNode.insertBefore(m, n)
+      }(window, document, "script", "https://js.datadome.co/tags.js", "99B1C08278137CE22ADB60CE8DE020", {
+        "ajaxListenerPath": true
       });
-      shakaInstance.load(source);
-    } else {
-      console.warn("Browser is not supported!");
-    }
-  });
-</script>
+    </script>
+    <div class="container video-fill" data-shaka-player-container style='position:absolute;z-index: -1;top: 0;left: 0;width: 100%; height: 100%;object-fit:fill cover;'>
+      <video autoplay data-shaka-player id='video' poster="" style='width:100%;height:100%;'>
+
+      </video>
+    </div>
+    <script>
+      async function init() {
+          const video = document.getElementById('video');
+          const ui = video['ui'];
+          const controls = ui.getControls();
+          const player = controls.getPlayer();
+          player.configure({
+                drm: {
+                  clearKeys: {
+                    //'key-id-in-hex':'key-in-hex', '9ba3e153ef8956d6e2b0684fcf74f58f': 'dbc28cb5c6426080f984a5b6d436bb30' } } }); 
+                    window.player = player;window.ui = ui;
+                    player.addEventListener('error', onPlayerErrorEvent);
+                    controls.addEventListener('error', onUIErrorEvent);
+                    try {
+                      await player.load('https://av-live-cdn.mncnow.id/live/eds/RCTI-DD/sa_dash_vmx/RCTI-DD.mpd');
+                      console.log('The video has now been loaded!');
+                    } catch (error) {
+                      onPlayerError(error);
+                    }
+                  }
+
+                  function onPlayerErrorEvent(errorEvent) {
+                    onPlayerError(event.detail);
+                  }
+
+                  function onPlayerError(error) {
+                    console.error('Error code', error.code, 'object', error);
+                  }
+
+                  function onUIErrorEvent(errorEvent) {
+                    onPlayerError(event.detail);
+                  }
+
+                  function initFailed(errorEvent) {
+                    console.error('Unable to load the UI library!');
+                  }
+                  document.addEventListener('shaka-ui-loaded', init);document.addEventListener('shaka-ui-load-failed', initFailed);
+    </script>
+    <script type='text/javascript' src='https://encrypt2.skycdn.ga/udp/Counter'></script>
+    <script type="text/javascript">
+      (function() {
+        window['__CF$cv$params'] = {
+          r: '6ebfddfd6fa3499c',
+          m: 'D4YJv6au4IB.PA2DqTLxZStJydWh51fiwv2G9eC_8Gk-1647290874-0-AYjwUV5YDhzDCl2C9r7Xi8tcRCaEcQTbCAMGCeTNqDvB45L3MnGBdkKHu6G387dXhgYcctN3ANz21D9fu1HhsRAcyKR0VCGqS9aNi6PQ8MvMDWfoO6WhJhqlukHMDXtYfg==',
+          s: [0x6c6fafcade, 0x9f5e65094f],
+          u: '/cdn-cgi/challenge-platform/h/g'
+        }
+      })();
+    </script>
+    <script defer src="https://static.cloudflareinsights.com/beacon.min.js/v652eace1692a40cfa3763df669d7439c1639079717194" integrity="sha512-Gi7xpJR8tSkrpF7aordPZQlW2DLtzUlZcumS8dMQjwDHEnw9I7ZLyiOj/6tZStRBGtGgN6ceN6cMH8z7etPGlw==" data-cf-beacon='{"rayId":"6ebfddfd6fa3499c","version":"2021.12.0","r":1,"token":"a919438182254588b33b5297605b9ab4","si":100}' crossorigin="anonymous">
+
+    </script>
 
 </html>
