--- a/embed/mncTV.html
+++ b/embed/mncTV.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="robots" content="noindex" />
   <meta name="referrer" content="never" />
-  <title>DONELFANTASTIC | RCTI TV</title>
+  <title>DONELFANTASTIC | MNCTV</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/plyr/3.6.12/plyr.min.css" />
   <style>
     * {
@@ -62,7 +62,7 @@
 <script>
   document.addEventListener("DOMContentLoaded", () => {
     const source =
-      "https://av-live-cdn.mncnow.id/live/eds/RCTI-DD/sa_dash_vmx/RCTI-DD.mpd";
+      "https://av-live-cdn.mncnow.id/live/eds/MNCTV-HD/sa_dash_vmx/MNCTV-HD.mpd";
     const video = document.querySelector("#donelfantastic");
     const player = new Plyr(video);
     window.player = player;
@@ -70,13 +70,13 @@
       // Install built-in polyfills
       shaka.polyfill.installAll();
       const shakaInstance = new shaka.Player(video);
-      shakaInstance.configure({
-        drm: {
-          clearKeys: {
-            "9ba3e153ef8956d6e2b0684fcf74f58f": "dbc28cb5c6426080f984a5b6d436bb30"
-          }
-        }
-      });
+      //shakaInstance.configure({
+        //drm: {
+          //clearKeys: {
+            //"9ba3e153ef8956d6e2b0684fcf74f58f": "dbc28cb5c6426080f984a5b6d436bb30"
+          //}
+        //}
+      //});
       shakaInstance.load(source);
     } else {
       console.warn("Browser is not supported!");
