--- a/embed/mncTV.html
+++ b/embed/mncTV.html
@@ -49,7 +49,7 @@
 
 <body>
   <div class="video-section video-responsive">
-    <video id="donelfantastic" preload="auto" controls crossorigin playsinline data-poster="https://thumbor.prod.vidiocdn.com/fgcHi2h8yWt6Bc3A7XSquRqWDCQ=/filters:quality(70)/vidio-web-prod-livestreaming/uploads/livestreaming/image/665/rcti-e4a143.jpg"></video>
+    <video id="donelfantastic" preload="auto" controls crossorigin playsinline data-poster=""></video>
   </div>
 </body>
 
