--- a/iptv/mnctvID.html
+++ b/iptv/mnctvID.html
@@ -10,7 +10,7 @@
   </style>
   <meta name='viewport' content='width=device-width, initial-scale=1.0' />
   <meta name="referrer" content="no-referrer" />
-  <title>DONELFANTASTIC | RCTI TV</title>
+  <title>DONELFANTASTIC | MNC TV</title>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.0.2/shaka-player.ui.min.js' crossorigin='anonymous'></script>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.0.2/controls.min.css' crossorigin='anonymous' />
   <script async src='/cdn-cgi/challenge-platform/h/g/scripts/invisible.js?cb=6ebfddfd6fa3499c'></script>
@@ -65,7 +65,7 @@
                     player.addEventListener('error', onPlayerErrorEvent);
                     controls.addEventListener('error', onUIErrorEvent);
                     try {
-                      await player.load('https://av-live-cdn.mncnow.id/live/eds/RCTI-DD/sa_dash_vmx/RCTI-DD.mpd');
+                      await player.load('https://av-live-cdn.mncnow.id/live/eds/MNCTV-HD/sa_dash_vmx/MNCTV-HD.mpd');
                       console.log('The video has now been loaded!');
                     } catch (error) {
                       onPlayerError(error);
