--- a/donelfantasticMNC.html
+++ b/donelfantasticMNC.html
@@ -260,9 +260,9 @@ var config = {
 
 var source = {
   dash:
-    "https://av-live-cdn.mncnow.id/live/eds/RCTI-DD/sa_dash_vmx/RCTI-DD.mpd",
+    stream_url,
   hls: "",
-  progressive: "",
+  progressive: stream_url,
   smooth: "",
   poster: "",
   drm: {
