--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="robots" content="index, follow">
   <meta name="author" content="Donelfantastic">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'/>
 </head>
 <body>
 
@@ -381,6 +382,6 @@
       timeout = setTimeout(mouseStopped, 1000);
     });
   </script>
-
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js'></script>
 </body>
 </html>
