--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta name="author" content="Donelfantastic">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'/>
+  <link rel="stylesheet" href="./src/min.style.css"/>
 </head>
 <body>
 
@@ -382,6 +383,7 @@
       timeout = setTimeout(mouseStopped, 1000);
     });
   </script>
+<script type=”text/javascript” src=”./src/min.script.js”></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js'></script>
 </body>
 </html>
