--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
       timeout = setTimeout(mouseStopped, 1000);
     });
   </script>
-<script type=”text/javascript” src=”/src/min.script.js”></script>
+<script type=”text/javascript” src=”.src/min.script.js”></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js'></script>
 </body>
 </html>
