--- a/index.html
+++ b/index.html
@@ -367,8 +367,8 @@
     <p class="end">Donel Fantastic &copy; 2023, ALL Rights Reserved</p>
   </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-<script type=”text/javascript” src=”src/min.script.js”></script>
-  
+<script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js'></script>
+<script  src="./src/min.script.js"></script>
   <script type="text/javascript">
     const cursor = document.querySelector(".cursor")
     document.addEventListener("mousemove", (e) => {
@@ -385,6 +385,6 @@
       timeout = setTimeout(mouseStopped, 1000);
     });
   </script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js'></script>
+
 </body>
 </html>
