--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <li class="my-event"><a href="#serv">Events<i class="fa fa-calendar" aria-hidden="true"></i></a></li>
     <li class="my-music"><a href="#ytpl-player1">Music<i class="fa fa-music" aria-hidden="true"></i></a></li>
     <li class="my-info"><a href="#small">Join Us<i class="fa fa-info" aria-hidden="true"></i></a></li>
-    <li class="my-tv"><a href="#">Online TV<i class="fa fa-tv" aria-hidden="true"></i></a></li>
+    <li class="my-tv"><a href="./creativemedia/tv">Online TV<i class="fa fa-tv" aria-hidden="true"></i></a></li>
   </ul>
 </nav>
   
