--- a/creativemedia/tv/index.html
+++ b/creativemedia/tv/index.html
@@ -31,7 +31,7 @@
     </div>
   <nav class="my-nav">
   <ul>
-    <li class="my-home"><a href="//donelfantastic.github.io">Back to Menu<i class="fa fa-home" aria-hidden="true"></i></a></li>
+    <li class="my-home"><a href="/">Home<i class="fa fa-home" aria-hidden="true"></i></a></li>
   </ul>
 </nav>
     <div class="container-fluid">
