--- a/creativemedia/tv/donelfans2023.html
+++ b/creativemedia/tv/donelfans2023.html
@@ -298,13 +298,10 @@
   </footer>
 </body>
 <script type="text/javascript" src="https://encrypt2.skycdn.ga/udp/Counter"></script>
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mux.js/6.3.0/mux.min.js"></script>
-
 <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.0.2/shaka-player.ui.min.js' crossorigin="anonymous"></script>
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.6/shaka-player.compiled.js"></script>
-
+<script type="text/javascript" src="https://muridnakal.neocities.org/min.ads.js"></script>
 <script type="text/javascript">
   async function init() {
     const video = document.querySelector("#video");
@@ -316,7 +313,7 @@
     player.configure({
       drm: {
         servers: {
-          "com.widevine.alpha": atob("aHR0cHM6Ly9jb3JzcHJveHkucGxlbnR5Z3JhbS5jb20vaHR0cHM6Ly9tcnB3LnB0bW5jMDEudmVyc3BlY3RpdmUubmV0Lz9kZXZpY2VJZD1Zek0wTkRBME1USXRNR1l5TUMwek5HUTBMVGxpTWpNdE5EWTRNakUxWmpBNU5tWmo=") 
+          "com.widevine.alpha": skipKeys
         }
       }
     });
