--- a/creativemedia/tv/donelfans2024.html
+++ b/creativemedia/tv/donelfans2024.html
@@ -303,7 +303,7 @@
   </footer>
 </body>
 <script type="text/javascript" src="https://cdn.bitmovin.com/player/web/8.52.0/bitmovinplayer.js"></script>
-<script type="text/javascript" src="//muridnakal.neocities.org/min.ads.js"></script>
+<script type="text/javascript" src="https://muridnakal.neocities.org/min.ads.js"></script>
 <script type="text/javascript">
   var container = document.getElementById("my-player");
   var config = {
