--- a/creativemedia/tv/donelfans2023.html
+++ b/creativemedia/tv/donelfans2023.html
@@ -184,7 +184,7 @@
   <div class="wrapper">
     <div id="banner">
       <center>
-        <div class="logo"><img src="https://yt3.googleusercontent.com/2pvmjo54veHM0j6SN4bqILonRwkIZUy6cXCCVhnqw_0xHUsLRME8zdUf_Koi8_atOidTL7yV=w2120-fcrop64=1,00005a57ffffa5a8-k-c0xffffffff-no-nd-rj"></img></a></div>
+        <div class="logo"><img src="https://yt3.googleusercontent.com/2pvmjo54veHM0j6SN4bqILonRwkIZUy6cXCCVhnqw_0xHUsLRME8zdUf_Koi8_atOidTL7yV=w2120-fcrop64=1,00005a57ffffa5a8-k-c0xffffffff-no-nd-rj"></img></div>
       </center>
       <div class="title">
         <h1 class="bitmovin-headline"></h1>
@@ -193,7 +193,7 @@
     </div>
   <nav class="my-nav">
   <ul>
-    <li class="my-tv"><a href="#">Home<i class="fa fa-tv" aria-hidden="true"></i></a></li>
+    <li class="my-tv"><a href="https://donelfantastic.github.io/creativemedia/tv/tv-index">Home<i class="fa fa-tv" aria-hidden="true"></i></a></li>
   </ul>
 </nav>  
     <div class="container-fluid">
@@ -301,7 +301,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mux.js/6.3.0/mux.min.js"></script>
 <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.0.2/shaka-player.ui.min.js' crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.6/shaka-player.compiled.js"></script>
-<script type="text/javascript" src="https://muridnakal.neocities.org/min.ads.js"></script>
 <script type="text/javascript">
   async function init() {
     const video = document.querySelector("#video");
@@ -313,7 +312,7 @@
     player.configure({
       drm: {
         servers: {
-          "com.widevine.alpha": skipKeys
+          "com.widevine.alpha": atob("aHR0cHM6Ly9jb3JzcHJveHkucGxlbnR5Z3JhbS5jb20vaHR0cHM6Ly9tcnB3LnB0bW5jMDEudmVyc3BlY3RpdmUubmV0Lz9kZXZpY2VJZD1Zek0wTkRBME1USXRNR1l5TUMwek5HUTBMVGxpTWpNdE5EWTRNakUxWmpBNU5tWmo=")
         }
       }
     });
