--- a/creativemedia/tv/donelfans2024.html
+++ b/creativemedia/tv/donelfans2024.html
@@ -196,7 +196,7 @@
     </div>
     <nav class="my-nav">
       <ul>
-        <li class="my-tv"><a href="#">Channels<i class="fa fa-tv" aria-hidden="true"></i></a></li>
+        <li class="my-tv"><a href="https://donelfantastic.github.io/creativemedia/tv/tv-index">Channels<i class="fa fa-tv" aria-hidden="true"></i></a></li>
       </ul>
     </nav>
     <div class="container-fluid">
