--- a/creativemedia/tv/donelfans2023.html
+++ b/creativemedia/tv/donelfans2023.html
@@ -193,7 +193,7 @@
     </div>
   <nav class="my-nav">
   <ul>
-    <li class="my-tv"><a href="https://donelfantastic.github.io/creativemedia/tv/tv-index">Home<i class="fa fa-tv" aria-hidden="true"></i></a></li>
+    <li class="my-tv"><a href="https://donelfantastic.github.io/creativemedia/tv/tv-index">Channels<i class="fa fa-tv" aria-hidden="true"></i></a></li>
   </ul>
 </nav>  
     <div class="container-fluid">
