--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
     <span style="--i:28;"></span>
   </div>
   <div class="hero">
+  <figure></figure>
+  <figure></figure>
+  <figure></figure>
+  <figure></figure>
+  <figure></figure>    
     <div class="logo"><a title="back to homepage" href="#"><img src="https://yt3.googleusercontent.com/2pvmjo54veHM0j6SN4bqILonRwkIZUy6cXCCVhnqw_0xHUsLRME8zdUf_Koi8_atOidTL7yV=w2120-fcrop64=1,00005a57ffffa5a8-k-c0xffffffff-no-nd-rj"></img></a></div>
   
   <nav class="my-nav">
@@ -88,7 +93,7 @@
     <li class="my-home"><a href="/">Home<i class="fa fa-home" aria-hidden="true"></i></a></li>
     <li class="my-event"><a href="#serv">Events<i class="fa fa-calendar" aria-hidden="true"></i></a></li>
     <li class="my-music"><a href="#ytpl-player1">Music<i class="fa fa-music" aria-hidden="true"></i></a></li>
-    <li class="my-info"><a href="#small">Join Us<i class="fa fa-info" aria-hidden="true"></i></a></li>
+    <li class="my-info"><a href="#small">Follow Us<i class="fa fa-info" aria-hidden="true"></i></a></li>
     <li class="my-tv"><a href="./creativemedia/tv/tv-index">Online TV<i class="fa fa-tv" aria-hidden="true"></i></a></li>
   </ul>
 </nav>
