--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
       <a id="programm" href="https://youtube.com/@donelfantastic"><i class="fa-brands fa-youtube"></i></a>
     </div>
     <p class="end">Donel Fantastic &copy; 2023, ALL Rights Reserved</p>
-    <center><br><div id="histats_counter"></div></br></center>    
+    <center><br/><div id="histats_counter"></div></center>    
   </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js'></script>
