--- a/index.html
+++ b/index.html
@@ -370,8 +370,7 @@
       <a id="programm" href="https://youtube.com/@donelfantastic"><i class="fa-brands fa-youtube"></i></a>
     </div>
     <p class="end">Donel Fantastic &copy; 2023, ALL Rights Reserved</p>
-    <center><br/><div id="histats_counter"></div></center>    
-  </footer>
+   </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js'></script>
 <script  src="./src/min.script.js"></script>
@@ -391,15 +390,11 @@
       timeout = setTimeout(mouseStopped, 1000);
     });
   </script>
-<script type="text/javascript">var _Hasync= _Hasync|| [];
+<script src="//s10.histats.com/js15_as.js"></script>
+<script type="text/javascript">
+var _Hasync= _Hasync|| [];
 _Hasync.push(['Histats.start', '1,4767284,4,2050,280,25,00010000']);
 _Hasync.push(['Histats.fasi', '1']);
 _Hasync.push(['Histats.track_hits', '']);
-(function() {
-var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
-hs.src = ('//s10.histats.com/js15_as.js');
-(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
-})();</script>
-<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4767284&101" alt="web tracker" border="0"></a></noscript>
 </body>
 </html>
