--- a/creativemedia/tv/tv-index.html
+++ b/creativemedia/tv/tv-index.html
@@ -57,7 +57,7 @@
       <a id="programm" href="https://youtube.com/@donelfantastic"><i class="fa-brands fa-youtube"></i></a>
     </div>
     <p class="company-name">Donel Fantastic &copy; 2023, ALL Rights Reserved</p>
-  <center><br/><div id="histats_counter"></div></center>
+  <center><tr><div id="histats_counter"></div></tr></center>
   </footer>
 </body>
 <script  src="./script.js"></script>
