--- a/RatihTv.html
+++ b/RatihTv.html
@@ -351,7 +351,7 @@
 //  var stream_url = currentLocation.replace("?play&mediaType=all&live=true&url=", "");
 
   var source = {
-   progressive:"https://ythls.onrender.com/channel/UC-Z1JXSK8zj0V9AVVgOYH6w.m3u8",
+   progressive:"https://ythls.onrender.com/video/S2de2MQ59EE.m3u8",
     poster:"https://raw.githubusercontent.com/donelfantastic/donelfantastic.github.io/main/assets/dftv.gif",   
   };
   
