--- a/dfVOD.html
+++ b/dfVOD.html
@@ -351,7 +351,7 @@
 //  var stream_url = currentLocation.replace("?play&mediaType=all&live=true&url=", "");
 
   var source = {
-   progressive:"https://vtvodjt.indihometv.com/toss/136/mp4/antv_3/1687604400/1687618800/chunklist.m3u8?stime=20230625105455&etime=20230625115455&encoded=04ef163aefc7",
+   hls:"https://vtvodjt.indihometv.com/toss/136/mp4/antv_3/1687604400/1687618800/chunklist.m3u8?stime=20230625105455&etime=20230625115455&encoded=04ef163aefc7",
     poster:"https://raw.githubusercontent.com/donelfantastic/donelfantastic.github.io/main/assets/dftv.gif",   
   };
   
