--- a/dfVOD.html
+++ b/dfVOD.html
@@ -351,7 +351,7 @@
 //  var stream_url = currentLocation.replace("?play&mediaType=all&live=true&url=", "");
 
   var source = {
-   progressive:"https://vtvodjt.indihometv.com/toss/136/1687604400/1687618800/antv.m3u8?stime=20230625105455&etime=20230625115455&encoded=04ef163aefc76c3b00927",
+   progressive:"https://www.vidio.com/videos/7551235/common_tokenized_playlist.m3u8",
     poster:"https://raw.githubusercontent.com/donelfantastic/donelfantastic.github.io/main/assets/dftv.gif",   
   };
   //https://www.vidio.com/videos/7551235/common_tokenized_playlist.m3u8
