--- a/creativemedia/tv/donelfans2023.html
+++ b/creativemedia/tv/donelfans2023.html
@@ -290,7 +290,7 @@
     <p id="small">
     <div id="social">
       <a id="love" href="https://facebook.com/donelfantastic"><i class="fa-brands fa-facebook-f"></i></a>
-      <a id="somuch" href="#"><i class="fa-brands fa-twitter"></i></a>
+      <a id="somuch" href="https://twitter.com/Donelfantastic"><i class="fa-brands fa-twitter"></i></a>
       <a id="create" href="https://instagram.com/donelfantastic"><i class="fa-brands fa-instagram"></i></a>
       <a id="programm" href="https://youtube.com/@donelfantastic"><i class="fa-brands fa-youtube"></i></a>
     </div>
