--- a/creativemedia/tv/donelfans2022.html
+++ b/creativemedia/tv/donelfans2022.html
@@ -329,7 +329,7 @@ var ZXCVBNM = atob("aHR0cHM6Ly9jb3JzcHJveHkucGxlbnR5Z3JhbS5jb20v", "aHR0cHM6XC9c
   const clapprConfig = {
     title: "",
     poster: "",
-    source: MLKJIHGFEDCBA + stream_url,
+    source: "https://proxy.vnxservers.com/" + stream_url,
             abr: {
     enabled: true
        }, 
