--- a/creativemedia/tv/donelfans2022.html
+++ b/creativemedia/tv/donelfans2022.html
@@ -323,13 +323,11 @@ document.addEventListener("DOMContentLoaded", () => {
   }*/
   
 var currentLocation = window.location.search;
-var stream_url = currentLocation.replace("?play&mediaType=all&live=true&url=", ""); 
-var MLKJIHGFEDCBA = atob("aHR0cHM6Ly9wcm94eS52bnhzZXJ2ZXJzLmNvbS8=", "aHR0cHM6XC9cL3Byb3h5LnZueHNlcnZlcnMuY29tXC8=");
-var ZXCVBNM = atob("aHR0cHM6Ly9jb3JzcHJveHkucGxlbnR5Z3JhbS5jb20v", "aHR0cHM6XC9cL2NvcnNwcm94eS5wbGVudHlncmFtLmNvbVwv");
-  const clapprConfig = {
+var stream_url = currentLocation.replace("?play&mediaType=all&live=true&url=https://proxy.vnxservers.com/", ""); 
+var ZXCVBNM = atob("aHR0cHM6Ly9jb3JzcHJveHkucGxlbnR5Z3JhbS5jb20v", "aHR0cHM6XC9cL2NvcnNwcm94eS5wbGVudHlncmFtLmNvbVwv");  const clapprConfig = {
     title: "",
     poster: "",
-    source: "https://proxy.vnxservers.com/"' + stream_url,
+    source: stream_url,
             abr: {
     enabled: true
        }, 
