--- a/creativemedia/tv/donelfans2022.html
+++ b/creativemedia/tv/donelfans2022.html
@@ -323,7 +323,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }*/
   
 var currentLocation = window.location.search;
-var stream_url = currentLocation.replace("?play&mediaType=all&live=true&url=https://proxy.vnxservers.com/", ""); 
+var stream_url = currentLocation.replace("?play&mediaType=all&live=true&url=", ""); 
 var ZXCVBNM = atob("aHR0cHM6Ly9jb3JzcHJveHkucGxlbnR5Z3JhbS5jb20v", "aHR0cHM6XC9cL2NvcnNwcm94eS5wbGVudHlncmFtLmNvbVwv");  const clapprConfig = {
     title: "",
     poster: "",
