--- a/creativemedia/live/donelfantasticTV2.html
+++ b/creativemedia/live/donelfantasticTV2.html
@@ -313,7 +313,7 @@
     const source = ABCDEFGHIJKLM + stream_url;
     player.configure({
       drm: {
-        servers: QWERTYUIOP
+        servers: QWERTY123
       }
     });
     window.player = player;
@@ -321,7 +321,7 @@
     player.addEventListener("error", onPlayerErrorEvent);
     controls.addEventListener("error", onUIErrorEvent);
     try {
-      await player.load(ABCDEFGHIJKLM);
+      await player.load(stream_url);
       console.log("The video has now been loaded!");
     } catch (error) {
       onPlayerError(error);
