--- a/creativemedia/live/index.html
+++ b/creativemedia/live/index.html
@@ -56,7 +56,7 @@
       <a id="create" href="https://instagram.com/donelfantastic"><i class="fa-brands fa-instagram"></i></a>
       <a id="programm" href="https://youtube.com/@donelfantastic"><i class="fa-brands fa-youtube"></i></a>
     </div>
-    <p class="company-name">Donelfantastic &copy; 2023-2024, ALL Rights Reserved</p>
+    <p class="company-name">Donelfantastic &copy; 2023-2024, ALL Rights Reserved.</p>
   <center><tr><div id="histats_counter" style="display: none;"></div></tr></center>
   </footer>
 </body>
