--- a/creativemedia/live/donelfantasticTV.html
+++ b/creativemedia/live/donelfantasticTV.html
@@ -37,11 +37,11 @@ body {
   padding-bottom: 6rem;
   min-height: 100%;
   background: rgba(44, 131, 185, 1);
-    background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
 }
 #banner {
   border-bottom: 1px solid #fff;
-  background-color: transparent;
+  background-color: #1b2735;
   width: 100%;
 }
 #banner h1 {
