--- a/creativemedia/live/donelfantasticTV2.html
+++ b/creativemedia/live/donelfantasticTV2.html
@@ -46,7 +46,7 @@
 
     #banner {
       border-bottom: 1px solid #fff;
-      background-color: #1eabe3;
+      background-color: #1b2735;
       width: 100%;
     }
 
