--- a/creativemedia/live/donelfantasticTV.html
+++ b/creativemedia/live/donelfantasticTV.html
@@ -41,7 +41,7 @@ body {
 }
 #banner {
   border-bottom: 1px solid #fff;
-  background-color: #1b2735;
+  background-color: #090a0f;
   width: 100%;
 }
 #banner h1 {
